# Tonsurance

./: .deployment-manifest.txt  .dockerignore  .env.example  .env.production.example  .gitignore  API_REFERENCE.md  API_SECURITY_IMPLEMENTATION_SUMMARY.md  API_V2_TRANSACTIONAL.md  CLAUDE.md  CLOUDFLARE_SETUP.md  COMPLETION_PROGRESS_REPORT.md  CONFIGURATION_EXTRACTION_SUMMARY.md  CONSOLIDATION_COMPLETE.md  CURL_EXAMPLES.md  DATABASE_AND_ORACLE_COMPLETION_REPORT.md  DATA_FLOW_DIAGRAM.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUMMARY.md  DEVOPS_INFRASTRUCTURE_REPORT.md  Dockerfile  ESCROW_IMPLEMENTATION_STATUS.md  FINAL_SESSION_SUMMARY.md  GITHUB_SYNC_STRATEGY.md  HACKATHON_DEPLOYMENT_CHECKLIST.md  HACKATHON_DEPLOYMENT_GUIDE.md  LOCAL_DEVELOPMENT.md  MINI_APP_GUIDE.md  PHASE1_COLLATERAL_MANAGER_SUMMARY.md  PHASE2_SUMMARY_REPORT.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START_INTEGRATION.md  README.md  README_old.md  RESILIENT_HTTP_IMPLEMENTATION_REPORT.md  RESILIENT_HTTP_QUICK_START.md  SECURITY_QUICK_REFERENCE.md  (+26 more)
.claude/: settings.local.json
Tonsurance/: .env.example  BUILD_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  HEDGED_ARCHITECTURE.md  PHASE4_COMPLETE.md  TESTING_STATUS.md  TEST_STATUS.md  WRAPPERS_COMPLETE.md  WRAPPERS_GUIDE.md  package-lock.json  package.json
backend/: CONFIG_QUICK_REFERENCE.md  ETL_IMPLEMENTATION_SUMMARY.md  ETL_PIPELINE_DOCUMENTATION.md  Makefile  ORACLE_INTEGRATION_REPORT.md  PHASE2_IMPLEMENTATION_GUIDE.md  dune-workspace  tonsurance.opam
backend/analytics/: dune  market_correlation.ml  volatility_estimator.ml
backend/api/: API_V2_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  QUICK_START.md  README_API_V2.md  SECURITY_QUICK_START.md  admin_api.ml  api_server.ml  api_v2.ml  api_v2_server.ml  bridge_api.ml  bulk_protection_api.ml  dune  dynamic_pricing_api.ml  escrow_api.ml  hedging_api.ml  ocaml_price_api.ml  rate_limiter.ml  security_middleware.ml  tranche_apy_api.ml  transactional_api.ml  websocket_v2.ml
backend/api/examples/: test_api_v2.sh  test_websocket.html
backend/daemons/: dune  etl_orchestrator.ml  integration_daemon.ml  risk_management_daemon.ml  trigger_monitor.ml
backend/db/: INDEX_SUMMARY.md  PERFORMANCE_GUIDE.md  bridge_db 2.ml  bridge_db.ml  bridge_transactions_schema.sql  claims_db.ml  connection_pool.ml  dune  escrow_db.ml  hedge_persistence.ml  hedge_positions_schema.sql  monitoring_queries.sql  risk_db.ml  transaction_db.ml
backend/escrow/: ESCROW_INSURANCE_EXAMPLES.md  arbiter_registry.ml  dispute_engine.ml  dune  escrow_engine.ml  escrow_integration_example.ml  insurance_integration.ml
backend/etl/: correlation_matrix_updater.ml  data_validation.ml  depeg_event_ingestion.ml  dune
backend/float/: bitcoin_float_manager.ml  bridge_aggregator 2.ml  bridge_aggregator.ml  dune  multi_chain_wallet.ml
backend/hedging/: BINANCE_SYMBOL_MAPPING.md  README.md  bridge_hedge_executor.ml  cex_liquidation_executor.ml  depeg_hedge_executor.ml  dune  hedge_cost_fetcher.ml  hedge_orchestrator.ml  protocol_short_executor.ml
backend/integration/: BINANCE_FUTURES_README.md  INTEGRATION_LAYER_README.md  ORACLE_QUICK_START.md  QUICK_START_INTEGRATION.md  TON_WRITE_OPERATIONS.md  allianz_parametric_client.ml  binance_futures_client.ml  binance_http_client.ml  bridge_health_client.ml  cex_liquidation_client.ml  chain_event_client.ml  chain_metrics_client.ml  chainlink_client.ml  chainlink_http_client.ml  database.ml  dune  dydx_v4_client.ml  escrow_oracle_client.ml  gmx_v2_client.ml  http_client.ml  hyperliquid_client.ml  oracle_aggregator.ml  policy_event_subscriber.ml  polymarket_http_client.ml  pyth_client.ml  redis_client.ml  resilient_http_client.ml  rubic_bridge_client 2.ml  rubic_bridge_client.ml  ton_client.ml  ton_client_example.ml  vault_sync.ml
backend/pool/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  UTILIZATION_TRACKER_README.md  collateral_manager.ml  collateral_manager_example.ml  dune  float_rebalancer.ml  tranche_arbitrage.ml  utilization_tracker 2.ml  utilization_tracker.ml  utilization_tracker_example.ml  waterfall_simulator.ml
backend/pricing/: HEDGE_PRICING_INTEGRATION.md  dune  hedge_cost_fetcher.ml  pricing_engine.ml  pricing_oracle_keeper.ml  pricing_oracle_keeper_v2.ml  tranche_pricing.ml
backend/reporting/: dune  risk_report_generator.ml
backend/risk/: chain_risk_calculator.ml  dune  market_data_risk_integration.ml  monte_carlo_enhanced.ml  risk_model.ml
backend/test/: api_security_test.ml  api_v2_transactional_test.ml  binance_futures_client_test.ml  bitcoin_float_manager_test.ml  bridge_integration_test.ml  collateral_manager_test.ml  dune  resilient_http_client_test.ml  test_dispute_resolution.ml  test_escrow_insurance_integration.ml  test_integration.ml  test_pricing_oracle_keeper.ml  test_unified_risk_monitor.ml  ton_client_write_test.ml  tranche_pricing_test.ml  utilization_tracker_test.ml  waterfall_simulator_test.ml
backend/test/integration/: README.md  dune  test_api_integration.ml  test_config_management.ml  test_market_data.ml  test_oracle_integration.ml
backend/tonny/: .env.example  .gitignore  BOTFATHER_SETUP.md  COMPILATION_STATUS.md  DEPLOYMENT.md  Dockerfile.inference  Dockerfile.mlx  INTEGRATION.md  Modelfile  QUICKSTART.md  README.md  compliance_filter.ml  conversation_state.ml  dune  ollama_client.ml  pricing_integration.ml  quote_cache.ml  telegram_webhook.ml  tonny_bot.ml  tonny_inference_server.py  tonny_server.py  train_tonny 2.py  train_tonny.py
backend/tonny/commands/: bridges.ml  buy.ml  claim.ml  dune  help.ml  policies.ml  quote.ml  start.ml  tonny.ml
backend/tonny/deploy/: deploy.sh  requirements.txt  tonny.service
backend/tonny/training_data/: test.jsonl  train.jsonl  train.txt  valid.jsonl
backend/tonny/training_data/train/: data.jsonl
contracts_old/: BeneficiaryPolicy.fc  BitcoinFloatManager.fc  MultiTrancheVault.fc  PolicyManager.fc  SmartEscrow.fc
deployments/: testnet.json
docs/: API_REFERENCE.md  CEX_LIQUIDATION_SPEC.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_ORDER.md  (+36 more)
(+625 files in other folders)
