(library
 (name market_analytics)
 (public_name tonsurance.analytics)
 (libraries
   core
   lwt
   lwt.unix
   logs
   logs.lwt
   yojson
   ppx_deriving_yojson.runtime
   postgresql
   tonsurance.types
   tonsurance.math
   tonsurance.pipeline)
 (preprocess (pps lwt_ppx ppx_sexp_conv ppx_fields_conv ppx_compare ppx_deriving_yojson))
 (modules volatility_estimator))
