(library
 (name bitcoin_float)
 (public_name tonsurance.bitcoin_float)
 (modules bitcoin_float_manager bridge_aggregator multi_chain_wallet)
 (libraries core types math pool integration monitoring lwt lwt.unix cohttp cohttp-lwt-unix digestif yojson logs logs.lwt)
 (preprocess (pps lwt_ppx ppx_jane ppx_deriving_yojson)))
