(library
 (name risk_model)
 (public_name tonsurance.risk_model)
 (wrapped false)
 (libraries core types math integration monte_carlo_enhanced lwt lwt.unix logs logs.lwt)
 (modules market_data_risk_integration risk_model)
 (preprocess (pps lwt_ppx ppx_sexp_conv ppx_deriving_yojson)))

(library
 (name monte_carlo_enhanced)
 (public_name tonsurance.monte_carlo_enhanced)
 (libraries
   core
   lwt
   logs
   logs.lwt
   caqti
   caqti-lwt.unix
   caqti-driver-postgresql
   math)
 (modules monte_carlo_enhanced)
 (flags (:standard -w -49))
 (preprocess (pps lwt_ppx ppx_sexp_conv ppx_deriving_yojson)))

(library
 (name chain_risk_calculator)
 (public_name tonsurance.chain_risk_calculator)
 (libraries core types math lwt lwt.unix integration db)
 (modules chain_risk_calculator)
 (preprocess (pps lwt_ppx ppx_sexp_conv ppx_deriving_yojson)))
