(library
 (name tonny_lib)
 (modules
  compliance_filter
  ollama_client
  pricing_integration
  conversation_state
  quote_cache
  telegram_webhook)
 (libraries
  core
  lwt
  lwt.unix
  cohttp-lwt-unix
  yojson
  str
  types
  pool
  monitoring
  pricing_engine))

(executable
 (name tonny_bot)
 (modules tonny_bot)
 (libraries
  core
  lwt
  lwt.unix
  cohttp-lwt-unix
  types
  tonny_lib
  tonny_commands
  pool
  monitoring
  pricing_engine)
 (preprocess (pps ppx_jane ppx_deriving_yojson)))
